native/include/alexandria_ffi.h

#define FILE_ERR_NOT_FOUND 4
#define FILE_ERR_INVALID_STATE 5
#define FILE_ERR_DISK 6
/**
 * Result of `alexandria_files_list` and `alexandria_file_get_by_uuid` (UC-03).
 * On success `status` is `FILE_OK` and `json` is a NUL-terminated JSON string
 * — byte-for-byte the same shape HTTP returns from `GET /v1/files` (a JSON
 * array of `File` records) or `GET /v1/files/{uuid}` (a `FileView` object),
 * so the FFI and HTTP surfaces agree modulo key ordering (parity, FR-FC-24 /
 * NFR-09). On failure `json` is NULL and `status` carries the mapped error
 * code. The caller must free `json` with `alexandria_free_string`.
 */
typedef struct FileJsonResult {
  int status;
  char *json;
} FileJsonResult;
/**
 * JSON result for the playback functions. `json` is NULL on error and
 * `status` carries the mapped code. The caller must free `json` with
 * `alexandria_free_string`.
 */
typedef struct PlaybackJsonResult {
  int status;
  char *json;
} PlaybackJsonResult;
int32_t alexandria_health_status_code(void);
/**
 * Count of indexed files. For tests waiting for the background scan.
 */
int64_t alexandria_index_count_files(void);
/**
 * List/query files filtered by type and lifecycle state (UC-03 / FR-FC-12).
 *
 * `json_filters` is a JSON string `{"type":"audio","state":"all"}` (empty
 * string or NULL for defaults). The function deserializes it, calls the same
 * `BrowseFilesHandler` the HTTP route uses, and on success serializes the
 * returned `Vec<File>` back to a JSON array — so the FFI and HTTP surfaces
 * agree byte-for-byte modulo key ordering (parity, FR-FC-24 / NFR-09).
 * `token` is the bearer auth token.
 */
struct FileJsonResult alexandria_files_list(const char *json_filters, const char *token);
/**
 * Read a TextFile's content from disk (UC-32 / FR-TX-01).
 *
 * `uuid` is the file's public UUID (NUL-terminated string). On success
 * `json` carries the `FileContent` — byte-for-byte the same shape HTTP
 * returns from `GET /v1/files/{uuid}/content` (parity, FR-FC-24 / NFR-09).
 * `token` is the bearer auth token.
 */
struct FileJsonResult alexandria_file_read_content(const char *uuid, const char *token);
/**
 * Resolve a File to everything a local player needs to open it
 * (UC-38 / FR-MP-01, FR-MP-06).
 *
 * The FFI surface cannot carry a byte stream, so where HTTP streams
 * `GET /v1/files/{uuid}/stream`, this returns
 * `{"uuid":…,"path":…,"mimeType":…,"sizeBytes":…}` and the caller — Flutter
 * desktop, on the same machine as the file — opens that path directly.
 * Zero bytes cross this boundary. Parity with HTTP is defined on this
 * descriptor and on the authorization, state, and error decisions rather
 * than on byte transfer (FR-MP-06).
 */
struct PlaybackJsonResult alexandria_file_playback_source(const char *uuid, const char *token);
/**
 * One page of a CBZ ComicBook (UC-39 / FR-MP-04).
 *
 * Returns `{"uuid":…,"page":N,"pageCount":N,"mimeType":…,"bytesBase64":…}`.
 * Unlike UC-38, the bytes *do* cross the boundary: a comic page has no path
 * of its own — it lives inside an archive — and it is bounded, so
 * base64 inside the existing JSON payload keeps the FFI shape intact while
 * staying byte-exact with HTTP.
 */
struct PlaybackJsonResult alexandria_comic_page(const char *uuid, uint32_t page, const char *token);
/**
 * A downscaled thumbnail for a video, image, or comic
 * (UC-40 / FR-MP-05). Returns
 * `{"uuid":…,"mimeType":"image/jpeg","bytesBase64":…}`. Bounded derived
 * bytes, so the same base64 rule as `alexandria_comic_page` applies.
 */
struct PlaybackJsonResult alexandria_file_thumbnail(const char *uuid, const char *token);
/**
 * Rename a file (and its on-disk file) (UC-05 / FR-FC-19).
 *
 * `uuid` is the file's public UUID string; `name` is the new file name. The
 * function calls the same `RenameFileHandler` the HTTP route uses and on
 * success serializes the returned `File` back to JSON — the same shape HTTP
 * returns from `POST /v1/files/{uuid}/rename`, so the FFI and HTTP surfaces
 * agree byte-for-byte modulo key ordering (parity, FR-FC-24 / NFR-09).
 * `token` is the bearer auth token. A disk failure (AF-02) maps to
 * `FILE_ERR_DISK`; the catalog is left untouched in that case.
 */
struct FileJsonResult alexandria_file_rename(const char *uuid, const char *name, const char *token);
/**
 * Soft-delete a file (UC-06 / FR-FC-20).
 *
 * `uuid` is the file's public UUID string; `token` is the bearer auth token.
 * The function calls the same `SoftDeleteFileHandler` the HTTP route uses
 * and on success serializes the returned `File` back to JSON — the same
 * shape HTTP returns from `DELETE /v1/files/{uuid}`, so the FFI and HTTP
 * surfaces agree byte-for-byte modulo key ordering (parity, FR-FC-24 /
 * NFR-09). The on-disk file is untouched (only `state` and `deleted_at`
 * change on the catalog row).
 */
struct FileJsonResult alexandria_file_soft_delete(const char *uuid, const char *token);
/**
 * Restore a soft-deleted file (UC-07 / FR-FC-21).
 *
 * `uuid` is the file's public UUID string; `token` is the bearer auth token.
 * The function calls the same `RestoreFileHandler` the HTTP route uses and
 * on success serializes the returned `File` back to JSON — the same shape
 * HTTP returns from `POST /v1/files/{uuid}/restore`, so the FFI and HTTP
 * surfaces agree byte-for-byte modulo key ordering (parity, FR-FC-24 /
 * NFR-09). The on-disk file is untouched (only `state` and `deleted_at`
 * change on the catalog row). The retention window (default 30 days,
 * NFR-10) is enforced; a record past it is reported as `NotFound`
 * (`FILE_ERR_NOT_FOUND`) since UC-08 owns the actual hard purge.
 */
struct FileJsonResult alexandria_file_restore(const char *uuid, const char *token);
/**
 * Hard-purge a soft-deleted file's catalog row (UC-08 / FR-FC-22).
 *
 * `uuid` is the file's public UUID string; `token` is the bearer auth
 * token. The function calls the same `PurgeFileHandler` the HTTP route
 * uses (`DELETE /v1/files/{uuid}?purge=true`) and on success serializes
 * the pre-delete `File` back to JSON as confirmation — the same shape
 * HTTP returns, so the FFI and HTTP surfaces agree byte-for-byte modulo
 * key ordering (parity, FR-FC-24 / NFR-09). Only the catalog row (and its
 * subtype row) is removed; the on-disk file is untouched (NFR-07). The
 * retention window (default 30 days, NFR-10) is enforced: a record still
 * within it, or not `deleted`, is reported as `FILE_ERR_INVALID_STATE`.
 */
struct FileJsonResult alexandria_file_purge(const char *uuid, const char *token);
/**
 * Purge a file both on disk and in the catalog (UC-09 / FR-FC-23).
 *
 * `uuid` is the file's public UUID string; `token` is the bearer auth
 * token. The function calls the same `PurgeFileOnDiskHandler` the HTTP
 * route uses (`DELETE /v1/files/{uuid}?purge-on-disk=true`) and on success
 * serializes the returned [`PurgeOnDiskOutcome`] back to JSON — the same
 * shape HTTP returns, so the FFI and HTTP surfaces agree byte-for-byte
 * modulo key ordering (parity, FR-FC-24 / NFR-09). Unlike UC-08 there is no
 * retention gate: an `active` or `deleted` record is purgeable, the only
 * precondition is that it exists. A missing on-disk file is still a
 * success, reported via `diskFilePresent: false` (AF-01); a disk failure
 * is reported as `FILE_ERR_DISK` (AF-02) and leaves the record untouched.
 */
struct FileJsonResult alexandria_file_purge_on_disk(const char *uuid, const char *token);
/**
 * Free a string previously returned by an FFI accessor.
 *
 * # Safety
 *
 * `ptr` must be null, or a pointer returned by one of this library's
 * accessors and not yet freed. Passing anything else — a pointer this library
 * did not produce, or one already freed — is undefined behaviour. Declared
 * `unsafe` because that obligation is the caller's and cannot be checked here.
 */
void alexandria_free_string(char *ptr);