lib/core/bindings/alexandria_bindings.dart


  /// Resolve a File to everything a local player needs to open it
  /// (UC-38 / FR-MP-01, FR-MP-06).
  ///
  /// The FFI surface cannot carry a byte stream, so where HTTP streams
  /// `GET /v1/files/{uuid}/stream`, this returns
  /// `{"uuid":…,"path":…,"mimeType":…,"sizeBytes":…}` and the caller — Flutter
  /// desktop, on the same machine as the file — opens that path directly.
  /// Zero bytes cross this boundary. Parity with HTTP is defined on this
  /// descriptor and on the authorization, state, and error decisions rather
  /// than on byte transfer (FR-MP-06).
  PlaybackJsonResult alexandria_file_playback_source(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_file_playback_source(uuid, token);
  }

  late final _alexandria_file_playback_sourcePtr =
      _lookup<
        ffi.NativeFunction<
          PlaybackJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_file_playback_source');
  late final _alexandria_file_playback_source =
      _alexandria_file_playback_sourcePtr
          .asFunction<
            PlaybackJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// Hard-purge a soft-deleted file's catalog row (UC-08 / FR-FC-22).
  ///
  /// `uuid` is the file's public UUID string; `token` is the bearer auth
  /// token. The function calls the same `PurgeFileHandler` the HTTP route
  /// uses (`DELETE /v1/files/{uuid}?purge=true`) and on success serializes
  /// the pre-delete `File` back to JSON as confirmation — the same shape
  /// HTTP returns, so the FFI and HTTP surfaces agree byte-for-byte modulo
  /// key ordering (parity, FR-FC-24 / NFR-09). Only the catalog row (and its
  /// subtype row) is removed; the on-disk file is untouched (NFR-07). The
  /// retention window (default 30 days, NFR-10) is enforced: a record still
  /// within it, or not `deleted`, is reported as `FILE_ERR_INVALID_STATE`.
  FileJsonResult alexandria_file_purge(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_file_purge(uuid, token);
  }

  late final _alexandria_file_purgePtr =
      _lookup<
        ffi.NativeFunction<
          FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('alexandria_file_purge');
  late final _alexandria_file_purge = _alexandria_file_purgePtr
      .asFunction<
        FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// Purge a file both on disk and in the catalog (UC-09 / FR-FC-23).
  ///
  /// `uuid` is the file's public UUID string; `token` is the bearer auth
  /// token. The function calls the same `PurgeFileOnDiskHandler` the HTTP
  /// route uses (`DELETE /v1/files/{uuid}?purge-on-disk=true`) and on success
  /// serializes the returned [`PurgeOnDiskOutcome`] back to JSON — the same
  /// shape HTTP returns, so the FFI and HTTP surfaces agree byte-for-byte
  /// modulo key ordering (parity, FR-FC-24 / NFR-09). Unlike UC-08 there is no
  /// retention gate: an `active` or `deleted` record is purgeable, the only
  /// precondition is that it exists. A missing on-disk file is still a
  /// success, reported via `diskFilePresent: false` (AF-01); a disk failure
  /// is reported as `FILE_ERR_DISK` (AF-02) and leaves the record untouched.
  FileJsonResult alexandria_file_purge_on_disk(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_file_purge_on_disk(uuid, token);
  }

  late final _alexandria_file_purge_on_diskPtr =
      _lookup<
        ffi.NativeFunction<
          FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('alexandria_file_purge_on_disk');
  late final _alexandria_file_purge_on_disk = _alexandria_file_purge_on_diskPtr
      .asFunction<
        FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// Read a TextFile's content from disk (UC-32 / FR-TX-01).
  ///
  /// `uuid` is the file's public UUID (NUL-terminated string). On success
  /// `json` carries the `FileContent` — byte-for-byte the same shape HTTP
  /// returns from `GET /v1/files/{uuid}/content` (parity, FR-FC-24 / NFR-09).
  /// `token` is the bearer auth token.
  FileJsonResult alexandria_file_read_content(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_file_read_content(uuid, token);
  }

  late final _alexandria_file_read_contentPtr =
      _lookup<
        ffi.NativeFunction<
          FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('alexandria_file_read_content');
  late final _alexandria_file_read_content = _alexandria_file_read_contentPtr
      .asFunction<
        FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// Rename a file (and its on-disk file) (UC-05 / FR-FC-19).
  ///
  /// `uuid` is the file's public UUID string; `name` is the new file name. The
  /// function calls the same `RenameFileHandler` the HTTP route uses and on
  /// success serializes the returned `File` back to JSON — the same shape HTTP
  /// returns from `POST /v1/files/{uuid}/rename`, so the FFI and HTTP surfaces
  /// agree byte-for-byte modulo key ordering (parity, FR-FC-24 / NFR-09).
  /// `token` is the bearer auth token. A disk failure (AF-02) maps to
  /// `FILE_ERR_DISK`; the catalog is left untouched in that case.
  FileJsonResult alexandria_file_rename(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_file_rename(uuid, name, token);
  }

  late final _alexandria_file_renamePtr =
      _lookup<
        ffi.NativeFunction<
          FileJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_file_rename');
  late final _alexandria_file_rename = _alexandria_file_renamePtr
      .asFunction<
        FileJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Restore a soft-deleted file (UC-07 / FR-FC-21).
  ///
  /// `uuid` is the file's public UUID string; `token` is the bearer auth token.
  /// The function calls the same `RestoreFileHandler` the HTTP route uses and
  /// on success serializes the returned `File` back to JSON — the same shape
  /// HTTP returns from `POST /v1/files/{uuid}/restore`, so the FFI and HTTP
  /// surfaces agree byte-for-byte modulo key ordering (parity, FR-FC-24 /
  /// NFR-09). The on-disk file is untouched (only `state` and `deleted_at`
  /// change on the catalog row). The retention window (default 30 days,
  /// NFR-10) is enforced; a record past it is reported as `NotFound`
  /// (`FILE_ERR_NOT_FOUND`) since UC-08 owns the actual hard purge.
  FileJsonResult alexandria_file_restore(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_file_restore(uuid, token);
  }

  late final _alexandria_file_restorePtr =
      _lookup<
        ffi.NativeFunction<
          FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('alexandria_file_restore');
  late final _alexandria_file_restore = _alexandria_file_restorePtr
      .asFunction<
        FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// Soft-delete a file (UC-06 / FR-FC-20).
  ///
  /// `uuid` is the file's public UUID string; `token` is the bearer auth token.
  /// The function calls the same `SoftDeleteFileHandler` the HTTP route uses
  /// and on success serializes the returned `File` back to JSON — the same
  /// shape HTTP returns from `DELETE /v1/files/{uuid}`, so the FFI and HTTP
  /// surfaces agree byte-for-byte modulo key ordering (parity, FR-FC-24 /
  /// NFR-09). The on-disk file is untouched (only `state` and `deleted_at`
  /// change on the catalog row).
  FileJsonResult alexandria_file_soft_delete(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_file_soft_delete(uuid, token);
  }

  late final _alexandria_file_soft_deletePtr =
      _lookup<
        ffi.NativeFunction<
          FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('alexandria_file_soft_delete');
  late final _alexandria_file_soft_delete = _alexandria_file_soft_deletePtr
      .asFunction<
        FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// A downscaled thumbnail for a video, image, or comic
  /// (UC-40 / FR-MP-05). Returns
  /// `{"uuid":…,"mimeType":"image/jpeg","bytesBase64":…}`. Bounded derived
  /// bytes, so the same base64 rule as `alexandria_comic_page` applies.
  PlaybackJsonResult alexandria_file_thumbnail(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_file_thumbnail(uuid, token);
  }

  late final _alexandria_file_thumbnailPtr =
      _lookup<
        ffi.NativeFunction<
          PlaybackJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_file_thumbnail');
  late final _alexandria_file_thumbnail = _alexandria_file_thumbnailPtr
      .asFunction<
        PlaybackJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// List/query files filtered by type and lifecycle state (UC-03 / FR-FC-12).
  ///
  /// `json_filters` is a JSON string `{"type":"audio","state":"all"}` (empty
  /// string or NULL for defaults). The function deserializes it, calls the same
  /// `BrowseFilesHandler` the HTTP route uses, and on success serializes the
  /// returned `Vec<File>` back to a JSON array — so the FFI and HTTP surfaces
  /// agree byte-for-byte modulo key ordering (parity, FR-FC-24 / NFR-09).
  /// `token` is the bearer auth token.
  FileJsonResult alexandria_files_list(
    ffi.Pointer<ffi.Char> json_filters,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_files_list(json_filters, token);
  }

  late final _alexandria_files_listPtr =
      _lookup<
        ffi.NativeFunction<
          FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('alexandria_files_list');
  late final _alexandria_files_list = _alexandria_files_listPtr
      .asFunction<
        FileJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// Free a string previously returned by an FFI accessor.
  ///
  /// # Safety
  ///
  /// `ptr` must be null, or a pointer returned by one of this library's
  /// accessors and not yet freed. Passing anything else — a pointer this library
  /// did not produce, or one already freed — is undefined behaviour. Declared
  /// `unsafe` because that obligation is the caller's and cannot be checked here.
  void alexandria_free_string(ffi.Pointer<ffi.Char> ptr) {
    return _alexandria_free_string(ptr);
  }

  late final _alexandria_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'alexandria_free_string',
      );
  late final _alexandria_free_string = _alexandria_free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  int alexandria_health_status_code() {
    return _alexandria_health_status_code();
  }

  late final _alexandria_health_status_codePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
        'alexandria_health_status_code',
      );
  late final _alexandria_health_status_code = _alexandria_health_status_codePtr
      .asFunction<int Function()>();

  /// Count of indexed files. For tests waiting for the background scan.
  int alexandria_index_count_files() {
    return _alexandria_index_count_files();
  }
